# swh-storage

./: .copier-answers.yml  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  CONTRIBUTORS  MANIFEST.in  Makefile  Makefile.local  PKG-INFO  README.db_testing  README.dev  README.md  README.rst  conftest.py  mypy.ini  pyproject.toml  pytest.ini  requirements-pytest.txt  requirements-swh-journal.txt  requirements-swh.txt  requirements-test.txt  requirements.txt  setup.py  swh-storage_0.0.1.orig.tar.gz.delta  swh-storage_0.0.1.orig.tar.gz.id  swh-storage_0.0.10.orig.tar.gz.delta  swh-storage_0.0.10.orig.tar.gz.id  swh-storage_0.0.100.orig.tar.gz.delta  swh-storage_0.0.100.orig.tar.gz.id  swh-storage_0.0.101.orig.tar.gz.delta  swh-storage_0.0.101.orig.tar.gz.id  swh-storage_0.0.102.orig.tar.gz.delta  swh-storage_0.0.102.orig.tar.gz.id  swh-storage_0.0.103.orig.tar.gz.delta  swh-storage_0.0.103.orig.tar.gz.id  swh-storage_0.0.104.orig.tar.gz.delta  swh-storage_0.0.104.orig.tar.gz.id  swh-storage_0.0.105.orig.tar.gz.delta  swh-storage_0.0.105.orig.tar.gz.id  swh-storage_0.0.106.orig.tar.gz.delta  (+623 more)
debian/: changelog  control  rules
doc/: archiver-blueprint.md
docs/: Makefile  Makefile.local  archive-copies.rst  archiver-blueprint.md  archiver-blueprint.rst  cassandra-migrations.rst  cli.rst  db-schema.rst  extrinsic-metadata-specification.rst  index.rst  object-masking.rst  replayer.rst  sql-storage.rst  vault-blueprint.md
docs/images/: .gitignore  Makefile  swh-archive-copies.dia
sql/: .gitignore  Makefile  TODO  clusters.dot  swh-data.sql  swh-enums.sql  swh-func.sql  swh-indexes.sql  swh-init.sql  swh-schema.sql  swh-triggers.sql  swh.sql
sql/archiver/: Makefile  swh-archiver-data.sql  swh-archiver-func.sql  swh-archiver-schema.sql
sql/json/: entity.doap.schema.json  entity.lister_metadata.schema.json  entity.metadata.schema.json  entity_history.doap.schema.json  entity_history.lister_metadata.schema.json  fetch_history.result.schema.json  list_history.result.schema.json  listable_entity.list_params.schema.json  revision.metadata.schema.json
sql/upgrades/: 015.sql  017.sql  018.sql  019.sql  020.sql  021.sql  022.sql  024.sql  026.sql  027.sql  029.sql  032.sql  034.sql  035.sql  036.sql  038.sql  039.sql  040.sql  042.sql  044.sql  045.sql  047.sql  048.sql  049.sql  054.sql  055.sql  056.sql  057.sql  061.sql  062.sql  063.sql  064.sql  066.sql  069.sql  070.sql  072.sql  073.sql  074.sql  075.sql  076.sql  (+62 more)
swh/: __init__.py
swh.storage.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
swh/storage/: __init__.py  api.py  backfill.py  buffer.py  bundle.py  cassandra.py  cli.py  common.py  converters.py  db.py  db_utils.py  exc.py  extrinsic_metadata.py  filter.py  fixer.py  in_memory.py  interface.py  journal_writer.py  listener.py  metrics.py  migrate_extrinsic_metadata.py  objstorage.py  pytest_plugin.py  remote_storage.py  replay.py  retry.py  (+5 more)
utils/: dump_revisions.py  fix_revisions_from_dump.py
(+313 files in other folders)
