[project]
name = "swh.storage"
authors = [
    {name="Software Heritage developers", email="swh-devel@inria.fr"},
]

description = "Software Heritage storage manager"
readme = {file = "README.rst", content-type = "text/x-rst"}
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
]
dynamic = ["version", "dependencies", "optional-dependencies"]

[tool.setuptools.packages.find]
include = ["swh.*"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt", "requirements-swh.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
testing = {file = ["requirements-test.txt", "requirements-swh-journal.txt"]}
journal = {file = ["requirements-swh-journal.txt"]}

[project.entry-points."swh.storage.classes"]
"remote" = "swh.storage.api.client:RemoteStorage"
"memory" = "swh.storage.in_memory:InMemoryStorage"
"cassandra" = "swh.storage.cassandra:CassandraStorage"
"postgresql" = "swh.storage.postgresql.storage:Storage"
# deprecated
"local" = "swh.storage.postgresql.storage:Storage"
# proxy storages
"buffer" = "swh.storage.proxies.buffer:BufferingProxyStorage"
"counter" = "swh.storage.proxies.counter:CountingProxyStorage"
"filter" = "swh.storage.proxies.filter:FilteringProxyStorage"
"retry" = "swh.storage.proxies.retry:RetryingProxyStorage"
"tenacious" = "swh.storage.proxies.tenacious:TenaciousProxyStorage"
"validate" = "swh.storage.proxies.validate:ValidatingProxyStorage"
"record_references" = "swh.storage.proxies.record_references:RecordReferencesProxyStorage"
"masking" = "swh.storage.proxies.masking:MaskingProxyStorage"
"blocking" = "swh.storage.proxies.blocking:BlockingProxyStorage"

[project.entry-points."swh.cli.subcommands"]
"swh.storage" = "swh.storage.cli"
"swh.storage.proxies.masking" = "swh.storage.proxies.masking.cli"
"swh.storage.proxies.blocking" = "swh.storage.proxies.blocking.cli"

[project.urls]
"Homepage" = "https://gitlab.softwareheritage.org/swh/devel/swh-storage"
"Bug Reports" = "https://gitlab.softwareheritage.org/swh/devel/swh-storage/-/issues"
"Funding" = "https://www.softwareheritage.org/donate"
"Documentation" = "https://docs.softwareheritage.org/devel/swh-storage/"
"Source" = "https://gitlab.softwareheritage.org/swh/devel/swh-storage.git"

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
fallback_version = "0.0.1"

[tool.black]
target-version = ['py39', 'py310', 'py311', 'py312']

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
force_sort_within_sections = true
known_first_party = ['swh']
